# ncs_projects

./: .gitignore  README.md
adc/: prj.conf
bluetooth/: throughput_overlay.conf
bluetooth/central_uart/: prj.conf
bluetooth/hid_locker/: prj.conf
bluetooth/peripheral_uart/: Kconfig  prj.conf
cellular/connectivity_bridge_scanner/: prj.conf
cellular/mqtt_work/: Kconfig  README.rst  prj.conf
cellular/nrf_to_gcloud/: CMakeLists.txt  README.md  prj.conf
cellular/nrf_to_gcloud/include/: gcloud.h
cellular/nrf_to_gcloud/src/: gcloud.c  gcloud_rework.c  gcloud_rework.h  main.c
cellular/nrf_to_gcloud_with_ble/: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  instructions.txt  prj.conf  sample.yaml
cellular/timestamp_demo/: CMakeLists.txt  Kconfig  prj.conf
hello_world/: CMakeLists.txt  prj.conf
hello_world/build_nrf5340pdk_nrf5340_cpuapp/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  hello_world.emProject  hello_world.emSession  rules.ninja  zephyr_modules.txt
hello_world/src/: main.c  mult.c  mult.h
misc/include_demo/: CMakeLists.txt  prj.conf
misc/upgradable_bootloader/: CMakeLists.txt  Kconfig  prj.conf
mqtt_work/: README.rst  prj.conf
mqtt_work/src/: main.c
ncs_demos/spm_demo/: README
peripheral/adc/: CMakeLists.txt  prj.conf
peripheral/i2c/: CMakeLists.txt  README.rst  nrf5340pdk_nrf5340_cpuappns.overlay  nrf9160dk_nrf9160ns.overlay  prj.conf
peripheral/i2c/src/: main.c
peripheral/spim/: prj.conf
peripheral_nrfx/spim/: nrf5340pdk_nrf5340_cpuapp.overlay  prj.conf  (+1 more)
peripheral_uart/: prj.conf
(+743 files in other folders)
